fixed loss curve misalignment on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -581,7 +581,7 @@
 
   .layout-container {
     width: 100vmin;
-    height: 500px;
+    /* height: 500px; */
     /* display: flex; */
     /* flex-direction: column; */
     /* flex-wrap: wrap; */
@@ -1033,10 +1033,18 @@
     opacity: 1;
   }
 
+
   .sliderContainer {
     display: flex;
     align-items: center;
     flex-direction: row;
+  }
+
+  .loss_chart {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
   }
 
   .loss_chart .recharts-surface {
